test: fixes a few sonar issues